--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.44.1" , features = ["sync"]}
 log = "0.4.26"
 ipnet = "2.11.0"
 regex = "1.11.1"
+surge-ping = "0.8.2"
 
 [dev-dependencies]
 tokio = { version = "1.44.1" , features = ["full"]}
