--- a/frontend/Trunk.toml
+++ b/frontend/Trunk.toml
@@ -16,4 +16,4 @@ command = "sh"
 command_arguments = ["-c", "cd node && npm install"]
 
 [watch]
-watch = ["src", "Cargo.toml"]
+watch = ["src", "Cargo.toml", "local.css"]
