--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,13 +11,15 @@ serde = "1.0.219"
 config = "0.15.11"
 reqwest = "0.12.15"
 thiserror = "2.0.12"
-tokio = { version = "1.44.1" , features = ["sync"]}
+tokio = { version = "1.44.1", features = ["sync"] }
 log = "0.4.26"
 ipnet = "2.11.0"
 regex = "1.11.1"
 surge-ping = "0.8.2"
+mikrotik-model = { version = "0.1.0", path = "../../mikrotik-model" }
+mikrotik-api = { version = "0.1.0", path = "../../mikrotik-api" }
 
 [dev-dependencies]
-tokio = { version = "1.44.1" , features = ["full"]}
+tokio = { version = "1.44.1", features = ["full"] }
 anyhow = "1.0.97"
 env_logger = "0.11.7"
