--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,9 +17,9 @@ ipnet = "2.11.0"
 regex = "1.11.1"
 surge-ping = "0.8.2"
 mikrotik-api = { version = "0.1.0", git = "https://github.com/koa/mikrotik-api" }
-mikrotik-model = { version = "0.1.0", git = "https://github.com/koa/mikrotik-model" }
+#mikrotik-model = { version = "0.1.0", git = "https://github.com/koa/mikrotik-model" }
 #mikrotik-api = { version = "0.1.0", path = "../../mikrotik-api" }
-#mikrotik-model = { version = "0.1.0", path = "../../mikrotik-model" }
+mikrotik-model = { version = "0.1.0", path = "../../mikrotik-model" }
 
 [dev-dependencies]
 tokio = { version = "1.44.1", features = ["full"] }
