--- a/binary/Cargo.toml
+++ b/binary/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2024"
 [dependencies]
 actix-web = "4"
 actix-web-static-files = "4"
-static-files = "0.2.3"
 backend = { path = "../backend" }
 async-graphql = "7.0.15"
 async-graphql-actix-web = "7.0.15"
@@ -21,6 +20,7 @@ tracing = { version = "0.1", features = ["log"] }
 serde = "1.0.218"
 serde_json = "1.0.139"
 futures-util = "0.3.31"
+include_dir = "0.7.4"
+mime-db = "1.8.0"
 
 [build-dependencies]
-static-files = "0.2.4"
