--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,6 +16,8 @@ log = "0.4.26"
 ipnet = "2.11.0"
 regex = "1.11.1"
 surge-ping = "0.8.2"
+encoding_rs = "0.8.35"
+convert_case = "0.8.0"
 mikrotik-api = { version = "0.1.0", git = "https://github.com/koa/mikrotik-api" }
 #mikrotik-model = { version = "0.1.0", git = "https://github.com/koa/mikrotik-model" }
 #mikrotik-api = { version = "0.1.0", path = "../../mikrotik-api" }
