--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,6 +22,7 @@ mikrotik-api = { version = "0.1.0", git = "https://github.com/koa/mikrotik-api" 
 #mikrotik-model = { version = "0.1.0", git = "https://github.com/koa/mikrotik-model" }
 #mikrotik-api = { version = "0.1.0", path = "../../mikrotik-api" }
 mikrotik-model = { version = "0.1.0", path = "../../mikrotik-model" }
+lru = "0.13.0"
 
 [dev-dependencies]
 tokio = { version = "1.44.1", features = ["full"] }
