--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -19,9 +19,9 @@ surge-ping = "0.8.2"
 encoding_rs = "0.8.35"
 convert_case = "0.8.0"
 mikrotik-api = { version = "0.1.0", git = "https://github.com/koa/mikrotik-api" }
-#mikrotik-model = { version = "0.1.0", git = "https://github.com/koa/mikrotik-model" }
+mikrotik-model = { version = "0.1.0", git = "https://github.com/koa/mikrotik-model" }
 #mikrotik-api = { version = "0.1.0", path = "../../mikrotik-api" }
-mikrotik-model = { version = "0.1.0", path = "../../mikrotik-model" }
+#mikrotik-model = { version = "0.1.0", path = "../../mikrotik-model" }
 lru = "0.13.0"
 
 [dev-dependencies]
