--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -17,7 +17,7 @@ log = "0.4"
 wasm-logger = "0.2.0"
 web-sys = "0.3.77"
 thiserror = "2.0.11"
-google-signin-client = "0.1.3"
+google-signin-client = { version = "0.2.0-SNAPSHOT", git="https://git.panter.ch/open-source/google-signin-client.git" }
 jwt = "0.16.0"
 wasm-timer = "0.2.5"
 lazy_static = "1.5.0"
